--- a/style.css
+++ b/style.css
@@ -5,10 +5,16 @@
   color: rgba(33, 43, 54, 1);
   font-family: Inter;
 }
+html {
+  scroll-behavior: smooth;
+}
+button {
+  cursor: pointer;
+}
+
 .products {
-  width: 90%;
-  margin: 0 auto;
-  padding-top: 1rem;
+  width: 70%;
+  margin: 2rem auto;
 }
 
 .products__header {
@@ -39,11 +45,22 @@
   letter-spacing: 0px;
   color: rgba(103, 103, 103, 1);
 }
+.products__header button {
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  color: white;
+  border: none;
+  border-radius: 0.6rem;
+  cursor: pointer;
+  margin-right: 1rem;
+  background-color: #28a745;
+}
 
 .cards {
   display: flex;
   flex-direction: column;
-  width: 24.2%;
+  justify-content: space-between;
+  width: 23.5%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 .cards h2 {
@@ -52,29 +69,376 @@
   padding-top: 1rem;
   font-weight: 600;
   padding-bottom: 1.8rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 1.5rem;
+  line-height: 1.5rem;
 }
 .cards p {
   font-size: 1rem;
   padding-left: 1.2rem;
   padding-right: 0.7rem;
-  padding-bottom: 2.75rem;
   font-weight: 400;
   color: rgba(99, 115, 129, 1);
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 6rem;
+  line-height: 1.2rem;
 }
 
 .price {
-  padding-bottom: 1.5rem;
-  margin-top: auto;
+  padding-top: 1rem;
+
   font-size: 1.2rem;
   font-weight: 600;
   text-align: center;
 }
-.cards img {
-  object-fit: contain;
+
+.price::before {
+  content: "";
+  display: block;
+  width: 1.9375rem;
+  height: 0.1225rem;
+  background-color: rgba(36, 53, 95, 1);
+  margin: 0.5rem auto 0.5rem auto;
+}
+
+.productimg {
+  width: 100%;
+  height: 40%;
+}
+
+.productimg img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain !important;
+}
+.cards:hover {
+  transform: scale(1.03);
+  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.1);
+  z-index: 10;
 }
 
 #products__cards {
+  width: 100%;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  gap: 0.8rem;
+  gap: 1rem;
+  justify-content: space-between;
+}
+
+.actions {
+  padding-bottom: 1rem;
+  display: flex;
+  gap: 1rem;
+  height: 9%;
+  justify-content: space-around;
+}
+
+.deletebtn,
+.updatebtn {
+  width: 15%;
+  border-radius: 0.5rem;
+  border: none;
+  color: white;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.deletebtn {
+  background-color: rgb(230, 69, 69);
+}
+
+.updatebtn {
+  background-color: rgb(26, 26, 218);
+}
+
+/* 
+.productImg {
+  background-color: rgba(242, 247, 251, 1);
+} */
+.loader {
+  font-size: 10px;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  margin: 0 auto;
+  text-indent: -9999em;
+  animation: mulShdSpin 1.1s infinite ease;
+  transform: translateZ(0);
+}
+
+@keyframes mulShdSpin {
+  0%,
+  100% {
+    box-shadow: 0em -2.6em 0em 0em #007bff,
+      1.8em -1.8em 0 0em rgba(0, 123, 255, 0.2),
+      2.5em 0em 0 0em rgba(0, 123, 255, 0.2),
+      1.75em 1.75em 0 0em rgba(0, 123, 255, 0.2),
+      0em 2.5em 0 0em rgba(0, 123, 255, 0.2),
+      -1.8em 1.8em 0 0em rgba(0, 123, 255, 0.2),
+      -2.6em 0em 0 0em rgba(0, 123, 255, 0.5),
+      -1.8em -1.8em 0 0em rgba(0, 123, 255, 0.7);
+  }
+  12.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(0, 123, 255, 0.7),
+      1.8em -1.8em 0 0em #007bff, 2.5em 0em 0 0em rgba(0, 123, 255, 0.2),
+      1.75em 1.75em 0 0em rgba(0, 123, 255, 0.2),
+      0em 2.5em 0 0em rgba(0, 123, 255, 0.2),
+      -1.8em 1.8em 0 0em rgba(0, 123, 255, 0.2),
+      -2.6em 0em 0 0em rgba(0, 123, 255, 0.2),
+      -1.8em -1.8em 0 0em rgba(0, 123, 255, 0.5);
+  }
+  25% {
+    box-shadow: 0em -2.6em 0em 0em rgba(0, 123, 255, 0.5),
+      1.8em -1.8em 0 0em rgba(0, 123, 255, 0.7), 2.5em 0em 0 0em #007bff,
+      1.75em 1.75em 0 0em rgba(0, 123, 255, 0.2),
+      0em 2.5em 0 0em rgba(0, 123, 255, 0.2),
+      -1.8em 1.8em 0 0em rgba(0, 123, 255, 0.2),
+      -2.6em 0em 0 0em rgba(0, 123, 255, 0.2),
+      -1.8em -1.8em 0 0em rgba(0, 123, 255, 0.2);
+  }
+  37.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(0, 123, 255, 0.2),
+      1.8em -1.8em 0 0em rgba(0, 123, 255, 0.5),
+      2.5em 0em 0 0em rgba(0, 123, 255, 0.7), 1.75em 1.75em 0 0em #007bff,
+      0em 2.5em 0 0em rgba(0, 123, 255, 0.2),
+      -1.8em 1.8em 0 0em rgba(0, 123, 255, 0.2),
+      -2.6em 0em 0 0em rgba(0, 123, 255, 0.2),
+      -1.8em -1.8em 0 0em rgba(0, 123, 255, 0.2);
+  }
+  50% {
+    box-shadow: 0em -2.6em 0em 0em rgba(0, 123, 255, 0.2),
+      1.8em -1.8em 0 0em rgba(0, 123, 255, 0.2),
+      2.5em 0em 0 0em rgba(0, 123, 255, 0.5),
+      1.75em 1.75em 0 0em rgba(0, 123, 255, 0.7), 0em 2.5em 0 0em #007bff,
+      -1.8em 1.8em 0 0em rgba(0, 123, 255, 0.2),
+      -2.6em 0em 0 0em rgba(0, 123, 255, 0.2),
+      -1.8em -1.8em 0 0em rgba(0, 123, 255, 0.2);
+  }
+  62.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(0, 123, 255, 0.2),
+      1.8em -1.8em 0 0em rgba(0, 123, 255, 0.2),
+      2.5em 0em 0 0em rgba(0, 123, 255, 0.2),
+      1.75em 1.75em 0 0em rgba(0, 123, 255, 0.5),
+      0em 2.5em 0 0em rgba(0, 123, 255, 0.7), -1.8em 1.8em 0 0em #007bff,
+      -2.6em 0em 0 0em rgba(0, 123, 255, 0.2),
+      -1.8em -1.8em 0 0em rgba(0, 123, 255, 0.2);
+  }
+  75% {
+    box-shadow: 0em -2.6em 0em 0em rgba(0, 123, 255, 0.2),
+      1.8em -1.8em 0 0em rgba(0, 123, 255, 0.2),
+      2.5em 0em 0 0em rgba(0, 123, 255, 0.2),
+      1.75em 1.75em 0 0em rgba(0, 123, 255, 0.2),
+      0em 2.5em 0 0em rgba(0, 123, 255, 0.5),
+      -1.8em 1.8em 0 0em rgba(0, 123, 255, 0.7), -2.6em 0em 0 0em #007bff,
+      -1.8em -1.8em 0 0em rgba(0, 123, 255, 0.2);
+  }
+  87.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(0, 123, 255, 0.2),
+      1.8em -1.8em 0 0em rgba(0, 123, 255, 0.2),
+      2.5em 0em 0 0em rgba(0, 123, 255, 0.2),
+      1.75em 1.75em 0 0em rgba(0, 123, 255, 0.2),
+      0em 2.5em 0 0em rgba(0, 123, 255, 0.2),
+      -1.8em 1.8em 0 0em rgba(0, 123, 255, 0.5),
+      -2.6em 0em 0 0em rgba(0, 123, 255, 0.7), -1.8em -1.8em 0 0em #007bff;
+  }
+}
+
+.d-none {
+  display: none;
+}
+
+.pro_details {
+  width: 80%;
+  margin: 5rem auto;
+}
+
+.product_details {
+  background-color: #fff;
+  border-radius: 1rem;
+  box-shadow: 0 0.6rem 1.7rem rgba(0, 0, 0, 0.1);
+  display: flex;
+  gap: 5rem;
+  padding: 2rem;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.productImg {
+  flex: 1 1 20rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.productImg img {
+  object-fit: contain;
+}
+
+.product_content {
+  flex: 2 1 40rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+}
+
+.product_content h2 {
+  font-size: 1.8rem;
+}
+
+.product_content h3 {
+  font-size: 1.2rem;
+}
+
+.product_content p {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: #333;
+  padding: 3rem 0rem;
+  width: 80%;
+}
+
+.price2 {
+  padding-bottom: 1.5rem;
+  margin-top: auto;
+  text-align: center;
+  font-size: 1.4rem;
+  font-weight: bold;
+  background-color: #1d4572;
+  color: white;
+  padding-top: 0.7rem;
+  letter-spacing: 0.3rem;
+}
+
+#goback {
+  align-self: center;
+  background-color: #000000;
+  color: white;
+  border: none;
+  padding: 0.7rem 2rem;
+  border-radius: 0.3rem;
+  cursor: pointer;
+}
+
+#goback:hover {
+  background-color: #636161;
+}
+
+.form {
+  width: 90%;
+  box-shadow: 0 0.6rem 1.7rem rgba(38, 43, 190, 0.1);
+  padding-top: 1rem;
+  margin: 7rem auto;
+  text-align: center;
+  padding-bottom: 5rem;
+  background-color: #f9f9f9;
+}
+#form {
+  margin: 1rem auto;
+  width: 60%;
+}
+form > div {
+  margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+  color: #333;
+}
+
+input[type="text"],
+input[type="number"],
+input[type="url"],
+textarea {
+  padding: 0.75rem 1rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 0.6rem;
+}
+
+input:focus,
+textarea:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+textarea {
+  min-height: 100px;
+  resize: vertical;
+}
+
+#form button {
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  color: white;
+  border: none;
+  border-radius: 0.6rem;
+  cursor: pointer;
+  margin-right: 1rem;
+}
+
+#add_button {
+  background-color: #28a745;
+}
+
+#add_button:hover {
+  background-color: #52ec74;
+}
+
+#edit_button {
+  background-color: #007bff;
+}
+
+#edit_button:hover {
+  background-color: #59a7fb;
+}
+
+@media screen and (max-width: 1150px) and (min-width: 901px) {
+  html {
+    font-size: 0.9rem;
+  }
+  .cards {
+    width: 31%;
+  }
+
+  .form {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 900px) and (min-width: 600px) {
+  html {
+    font-size: 0.7rem;
+  }
+  .cards {
+    width: 47%;
+  }
+
+  .form {
+    width: 70%;
+  }
+}
+@media screen and (max-width: 600px) {
+  html {
+    font-size: 0.5rem;
+  }
+  .cards {
+    width: 90%;
+  }
+
+  .form {
+    width: 60%;
+  }
 }
